# ara-api

./: .gitignore  Makefile  README.md  app.py  generate_proto.sh  main.py  make.bat  project_struct.txt  pyproject.toml  requirements.txt  reset.py
api/: api.py
api/data/: altitude.py  attitude.py  barometer.py  battery.py  channels.py  flags.py  odom.py  quaternion.py  vector.py
api/lib/: api_codes.py  api_driver.py  pid.py  transmitter.py
config/: driver.cfg  navigation.cfg  stream.cfg
data/: attitude.py  channels.py  odom.py  quaternion.py
docs/: conf.py  index.rst
docs/_build/doctrees/: app.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree
docs/_build/html/: .buildinfo  app.html  genindex.html  index.html  main.html  modules.html  objects.inv  search.html  searchindex.js
docs/doctrees/: README.doctree  environment.pickle  index.doctree
docs/doctrees/lab-examples/: first.doctree  index.doctree
docs/doctrees/programming/: first.doctree  index.doctree
docs/doctrees/theory/: index.doctree
docs/html/: .buildinfo  README.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_static/: documentation_options.js
docs/html/lab-examples/: first.html  index.html
docs/html/programming/: first.html  index.html
docs/html/theory/: index.html
docs/user-guide/ARA-EDU/: index.md
examples/: move_by_point(square).py  move_by_speed(circle).py  move_by_speed(square).py
examples/lib/: AppliedRoboticsAviaAPI.py
lib/: api_driver.py  drone.py  pid.py  planner.py  stream.py  transmitter.py
proto/: api.proto  driver.proto  navigation.proto  stream.proto  web.proto
src/: __init__.py  app.py  main.py  reset.py
src/data/: altitude.py  barometer.py  battery.py  channels.py  flags.py  imu.py  vector.py
src/driver/: codes.py  driver.py  msp_codes.py  msp_controller.py  msp_service.py  msp_transmitter.py  test.py
src/driver/protoc/: driver_pb2.py  driver_pb2_grpc.py
src/gui/: app_gui.py
src/lib/: api_driver.py  drone.py  pid.py  planner.py  test.py
src/navigation/: nav_service.py  navigation.py  test.py
src/navigation/planners/: nav_fw_planner.py  nav_multirotor_planner.py  (+2 more)
src/protoc/: api_pb2.py  api_pb2_grpc.py
src/protos/: api_pb2.py  api_pb2_grpc.py
src/stream/: stream.py
src/tmp/: app.py
src/web/: app.py  docs_app.py
test/: test.py
(+73 files in other folders)
